--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 180,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 181,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 182,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 183,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 184,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 185,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 186,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 187,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 188,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 189,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 190,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 191,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 192,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 193,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 194,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 195,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 196,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 197,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 198,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -1333,12 +1333,42 @@
     "    generate_model_template(\n",
     "        \"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "    ),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "templates4 = [\n",
+    "    \n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"tabnet\", param_grid=gandalf_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"gate\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"tabtransformer\", param_grid=resnet_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"gandalf\", param_grid=resnet_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"fttransformer\", param_grid=catboost_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"s1dcnn\", param_grid=catboost_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"resnet\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"housing\", \"catboost\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "    ),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 207,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1347,31 +1377,21 @@
     {
      "data": {
       "text/plain": [
-       "[('covertype', 'xgb'),\n",
-       " ('covertype', 'catboost'),\n",
-       " ('covertype', 'mlp'),\n",
-       " ('covertype', 'tabnet'),\n",
-       " ('covertype', 'gate'),\n",
-       " ('covertype', 'resnet'),\n",
-       " ('covertype', 's1dcnn'),\n",
-       " ('covertype', 'fttransformer'),\n",
-       " ('covertype', 'tabtransformer'),\n",
-       " ('covertype', 'autoint'),\n",
-       " ('covertype', 'node')]"
+       "[('titanic', 'catboost'), ('titanic', 'resnet')]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"covertype\" in i]"
+    "[i for i in total_missing_combos if \"titanic\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 200,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1385,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 201,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1397,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 202,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1409,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 203,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1421,7 +1441,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 204,
+   "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write the dictionary to a YAML file\n",
+    "with open(\"../configuration/experiment_runs4.yml\", \"w\") as f:\n",
+    "    yaml.dump(templates4, f, sort_keys=False, default_flow_style=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
