--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 165,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 166,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 167,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
     "        \"max_epochs\": 1000,\n",
     "        \"early_stopping\": True,\n",
     "        \"early_stopping_patience\": 10,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.0001,\n",
     "        \"validation_fraction\": 0.15,\n",
     "    },\n",
     "    \"batch_size\": [32, 64, 128, 256],\n",
@@ -137,8 +137,8 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"early_stopping\": True,\n",
-    "        \"early_stopping_patience\": 6,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"early_stopping_patience\": 4,\n",
+    "        \"tol\": 0.0001,\n",
     "        \"validation_fraction\": 0.15,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 168,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 169,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 170,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 171,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 172,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 173,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -494,11 +494,11 @@
     "    \"batch_size\": [1024, 2048, 4096],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
-    "    \"n_d\": [6, 32],\n",
-    "    \"n_steps\": [1, 6],\n",
+    "    \"n_d\": [6, 24],\n",
+    "    \"n_steps\": [3, 7],\n",
     "    \"gamma\": [1.0, 2.0],\n",
-    "    \"n_independent\": [1, 3],\n",
-    "    \"n_shared\": [1, 3],\n",
+    "    \"n_independent\": [2, 3],\n",
+    "    \"n_shared\": [2, 3],\n",
     "    \"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.00001]},\n",
     "        \"AdamW\": {\"weight_decay\": [0.0001, 0.00001]},\n",
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 174,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 175,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 176,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 177,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 178,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -875,7 +875,7 @@
     "    \"embedding_bias\": [True, False],\n",
     "    \"embedding_initialization\": [\"kaiming_uniform\", \"kaiming_normal\"],\n",
     "    \"shared_embedding_fraction\": [0.125, 0.25, 0.5],\n",
-    "    \"num_attn_blocks\": [4, 10],\n",
+    "    \"num_attn_blocks\": [4, 7],\n",
     "    \"attn_dropout\": [0.05, 0.3],\n",
     "    \"add_norm_dropout\": [0.05, 0.3],\n",
     "    \"ff_dropout\": [0.05, 0.3],\n",
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 179,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 180,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 181,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 182,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1183,14 +1183,8 @@
       "### XGB ###\n",
       "('covertype', 'xgb')\n",
       "### CATBOOST ###\n",
-      "('iris', 'catboost')\n",
-      "('titanic', 'catboost')\n",
-      "('breastcancer', 'catboost')\n",
-      "('ageconditions', 'catboost')\n",
       "('diabetes', 'catboost')\n",
-      "('housing', 'catboost')\n",
       "('creditcard', 'catboost')\n",
-      "('heloc', 'catboost')\n",
       "('covertype', 'catboost')\n",
       "### MLP ###\n",
       "('covertype', 'mlp')\n",
@@ -1249,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 183,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -1311,27 +1305,21 @@
     "\n",
     "\n",
     "templates3 = [\n",
-    "    \n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"gandalf\", param_grid=gandalf_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
+    "       \n",
     "    generate_model_template(\n",
     "        \"diabetes\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
-    "        \"heloc\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
     "        \"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "     generate_model_template(\n",
+    "        \"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"diabetes\", \"gate\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "    ),\n",
+    "    generate_model_template(\n",
+    "        \"diabetes\", \"tabnet\", param_grid=resnet_large_param_grid.copy()\n",
     "    ),\n",
     "]\n",
     "\n",
@@ -1368,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 184,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1377,21 +1365,26 @@
     {
      "data": {
       "text/plain": [
-       "[('titanic', 'catboost'), ('titanic', 'resnet')]"
+       "[('diabetes', 'catboost'),\n",
+       " ('diabetes', 'tabnet'),\n",
+       " ('diabetes', 'gate'),\n",
+       " ('diabetes', 'resnet'),\n",
+       " ('diabetes', 'fttransformer'),\n",
+       " ('diabetes', 'tabtransformer')]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"titanic\" in i]"
+    "[i for i in total_missing_combos if \"diabetes\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 185,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1405,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 186,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1417,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 187,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1429,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 188,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1441,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 189,
    "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
    "metadata": {},
    "outputs": [],
@@ -1453,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 190,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
