tolerance es fix

--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 217,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 218,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 219,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 220,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 221,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 222,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 223,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 224,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 225,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 226,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 227,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 228,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 229,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 230,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 231,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 232,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 233,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 234,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 235,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 236,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1365,26 +1365,27 @@
     {
      "data": {
       "text/plain": [
-       "[('diabetes', 'catboost'),\n",
-       " ('diabetes', 'tabnet'),\n",
-       " ('diabetes', 'gate'),\n",
-       " ('diabetes', 'resnet'),\n",
-       " ('diabetes', 'fttransformer'),\n",
-       " ('diabetes', 'tabtransformer')]"
+       "[('housing', 'tabnet'),\n",
+       " ('housing', 'gate'),\n",
+       " ('housing', 'resnet'),\n",
+       " ('housing', 's1dcnn'),\n",
+       " ('housing', 'fttransformer'),\n",
+       " ('housing', 'tabtransformer'),\n",
+       " ('housing', 'gandalf')]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"diabetes\" in i]"
+    "[i for i in total_missing_combos if \"housing\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 237,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1398,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 238,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1410,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 239,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1422,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 240,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1434,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 241,
    "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
    "metadata": {},
    "outputs": [],
@@ -1446,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 242,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
