--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 66,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 67,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 68,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 69,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 70,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 71,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 72,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 73,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 74,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 75,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 76,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 77,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 78,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 79,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 80,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 81,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 82,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 83,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1190,6 @@
       "('covertype', 'mlp')\n",
       "### TABNET ###\n",
       "('diabetes', 'tabnet')\n",
-      "('housing', 'tabnet')\n",
       "('creditcard', 'tabnet')\n",
       "('covertype', 'tabnet')\n",
       "### GATE ###\n",
@@ -1202,7 +1201,6 @@
       "('titanic', 'resnet')\n",
       "('breastcancer', 'resnet')\n",
       "('ageconditions', 'resnet')\n",
-      "('diabetes', 'resnet')\n",
       "('adult', 'resnet')\n",
       "('housing', 'resnet')\n",
       "('creditcard', 'resnet')\n",
@@ -1222,7 +1220,6 @@
       "### TABTRANSFORMER ###\n",
       "('diabetes', 'tabtransformer')\n",
       "('housing', 'tabtransformer')\n",
-      "('covertype', 'tabtransformer')\n",
       "### GANDALF ###\n",
       "('housing', 'gandalf')\n",
       "('creditcard', 'gandalf')\n",
@@ -1243,120 +1240,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 84,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
     "\n",
-    "    generate_model_template(\n",
-    "        \"covertype\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"creditcard\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"ageconditions\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "        generate_model_template(\n",
-    "        \"breastcancer\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"adult\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "        generate_model_template(\n",
-    "        \"creditcard\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"covertype\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
+    "generate_model_template(\n",
+    "\"adult\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"heloc\", \"resnet\", param_grid=gandalf_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"ageconditions\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
+    "),\n",
+    "\n",
+    "generate_model_template(\n",
+    "\"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "),\n",
+    "\n",
     "]\n",
+    "\n",
     "\n",
     "templates2 = [\n",
     "\n",
-    "   \n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"gandalf\", param_grid=gandalf_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "        generate_model_template(\n",
-    "        \"diabetes\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
-    "    ),\n",
-    "     generate_model_template(\n",
-    "        \"heloc\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "\n",
+    "generate_model_template(\n",
+    "\"diabetes\", \"gate\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"diabetes\", \"tabnet\", param_grid=resnet_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"breastcancer\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"creditcard\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy())\n",
     "]\n",
     "\n",
     "\n",
     "templates3 = [\n",
-    "       \n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "     generate_model_template(\n",
-    "        \"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"gate\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"tabnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
+    "\n",
+    "generate_model_template(\n",
+    "\"housing\", \"gate\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"housing\", \"tabtransformer\", param_grid=resnet_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"housing\", \"gandalf\", param_grid=resnet_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"housing\", \"fttransformer\", param_grid=catboost_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"housing\", \"s1dcnn\", param_grid=catboost_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"housing\", \"resnet\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "),\n",
+    "\n",
     "]\n",
     "\n",
-    "\n",
-    "\n",
-    "templates4 = [\n",
+    "templates4 = [generate_model_template(\n",
+    "\"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"covertype\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"creditcard\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "),\n",
     "    \n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"tabnet\", param_grid=gandalf_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"gate\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"tabtransformer\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"gandalf\", param_grid=resnet_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"fttransformer\", param_grid=catboost_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"s1dcnn\", param_grid=catboost_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"resnet\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"catboost\", param_grid=fttransformer_large_param_grid.copy()\n",
-    "    ),\n",
-    "]"
+    "generate_model_template(\n",
+    "\"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"covertype\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"creditcard\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "),\n",
+    "generate_model_template(\n",
+    "\"heloc\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "),]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 85,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1365,27 +1344,28 @@
     {
      "data": {
       "text/plain": [
-       "[('housing', 'tabnet'),\n",
-       " ('housing', 'gate'),\n",
+       "[('titanic', 'resnet'),\n",
+       " ('breastcancer', 'resnet'),\n",
+       " ('ageconditions', 'resnet'),\n",
+       " ('adult', 'resnet'),\n",
        " ('housing', 'resnet'),\n",
-       " ('housing', 's1dcnn'),\n",
-       " ('housing', 'fttransformer'),\n",
-       " ('housing', 'tabtransformer'),\n",
-       " ('housing', 'gandalf')]"
+       " ('creditcard', 'resnet'),\n",
+       " ('heloc', 'resnet'),\n",
+       " ('covertype', 'resnet')]"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"housing\" in i]"
+    "[i for i in total_missing_combos if \"resnet\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 86,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1399,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 87,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1411,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 88,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1423,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 89,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1435,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 90,
    "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
    "metadata": {},
    "outputs": [],
@@ -1447,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 91,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
