new default tables

--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "        \"shuffle\": True,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "    },\n",
     "    \"batch_size\": [32, 64, 128, 256],\n",
     "    \"hidden_size\": [1024, 2048, 4096],\n",
@@ -78,7 +78,7 @@
     "        \"shuffle\": True,\n",
     "        \"validation_fraction\": 0.15,\n",
     "        \"early_stopping_patience\": 6,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "    },\n",
     "    \"batch_size\": [1024, 4096],\n",
     "    \"hidden_size\": [2048, 4096],\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 27,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -408,16 +408,16 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 8,\n",
+    "        \"early_stopping_patience\": 3,\n",
     "    },\n",
     "    # \"learning_rate\": [0.01, 0.001],\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
     "    \"tree_depth\": [4, 6],\n",
     "    \"num_trees\": [4, 8],\n",
-    "    \"chain_trees\": [False, True],\n",
+    "    #\"chain_trees\": [False, True],\n",
     "    \"gflu_stages\": [3, 8],\n",
     "    \"gflu_dropout\": [0.0, 0.05],\n",
     "    \"tree_dropout\": [0.0, 0.05],\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 32,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -484,10 +484,10 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 8,\n",
+    "        \"early_stopping_patience\": 3,\n",
     "    },\n",
     "    # \"learning_rate\": [0.001, 0.0001],\n",
     "    \"virtual_batch_size_ratio\": [0.125, 0.25, 0.5, 1.0],\n",
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -563,10 +563,10 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 8,\n",
+    "        \"early_stopping_patience\": 3,\n",
     "        \"attn_feature_importance\": False,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048],\n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -612,7 +612,7 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -636,10 +636,10 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 8,\n",
+    "        \"early_stopping_patience\": 3,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
     "    \"gflu_stages\": [4, 10],\n",
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -707,10 +707,10 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 8,\n",
+    "        \"early_stopping_patience\": 3,\n",
     "    },\n",
     "    # \"learning_rate\": [0.2, 0.001],\n",
     "    \"batch_size\": [800, 1500],\n",
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -754,7 +754,7 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -788,12 +788,12 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 8,\n",
+    "        \"early_stopping_patience\": 3,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
     "    \"layers\": [\"128-64-32\", \"100-50-24\", \"128-64-32-16\", \"256-128-64\"],\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -866,10 +866,10 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 8,\n",
+    "        \"early_stopping_patience\": 3,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
     "    \"embedding_bias\": [True, False],\n",
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -913,7 +913,7 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
     "        \"early_stopping_patience\": 10,\n",
@@ -955,10 +955,10 @@
     "        \"hyperopt_evals\": 50,\n",
     "        \"auto_lr_find\": True,\n",
     "        \"precision\": 16,\n",
-    "        \"tol\": 0.00001,\n",
+    "        \"tol\": 0.001,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 8,\n",
+    "        \"early_stopping_patience\": 3,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 3500],\n",
     "    # \"attn_embed_dim\": [32, 16, 64],\n",
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 38,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
@@ -1189,8 +1189,6 @@
       "### MLP ###\n",
       "('covertype', 'mlp')\n",
       "### TABNET ###\n",
-      "('diabetes', 'tabnet')\n",
-      "('creditcard', 'tabnet')\n",
       "('covertype', 'tabnet')\n",
       "### GATE ###\n",
       "('diabetes', 'gate')\n",
@@ -1199,9 +1197,7 @@
       "('covertype', 'gate')\n",
       "### RESNET ###\n",
       "('titanic', 'resnet')\n",
-      "('breastcancer', 'resnet')\n",
       "('ageconditions', 'resnet')\n",
-      "('adult', 'resnet')\n",
       "('housing', 'resnet')\n",
       "('creditcard', 'resnet')\n",
       "('heloc', 'resnet')\n",
@@ -1240,18 +1236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 39,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
-    "\n",
     "generate_model_template(\n",
-    "\"adult\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"heloc\", \"resnet\", param_grid=gandalf_large_param_grid.copy()\n",
+    "\"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
     "\"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
@@ -1260,20 +1252,13 @@
     "\"ageconditions\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
     "),\n",
     "\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"tabtransformer\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "),\n",
-    "\n",
     "]\n",
     "\n",
     "\n",
     "templates2 = [\n",
     "\n",
     "generate_model_template(\n",
-    "\"diabetes\", \"gate\", param_grid=tabtransformer_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"tabnet\", param_grid=resnet_large_param_grid.copy()\n",
+    "\"diabetes\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
     "\"breastcancer\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
@@ -1282,29 +1267,23 @@
     "\"creditcard\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy())\n",
+    "\"covertype\", \"tabnet\", param_grid=tabnet_large_param_grid.copy()),\n",
+    "\n",
+    "generate_model_template(\n",
+    "\"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
+    "),\n",
     "]\n",
     "\n",
     "\n",
     "templates3 = [\n",
-    "\n",
     "generate_model_template(\n",
-    "\"housing\", \"gate\", param_grid=tabtransformer_large_param_grid.copy()\n",
+    "\"creditcard\", \"gandalf\", param_grid=catboost_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"housing\", \"tabtransformer\", param_grid=resnet_large_param_grid.copy()\n",
+    "\"creditcard\", \"s1dcnn\", param_grid=s1dcnn_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"housing\", \"gandalf\", param_grid=resnet_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"housing\", \"fttransformer\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"housing\", \"s1dcnn\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"housing\", \"resnet\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "\"creditcard\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
     "),\n",
     "\n",
     "]\n",
@@ -1313,12 +1292,11 @@
     "\"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
     "),\n",
     "generate_model_template(\n",
-    "\"covertype\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
     "\"creditcard\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
     "),\n",
-    "    \n",
+    "generate_model_template(\n",
+    "\"covertype\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
+    "),\n",
     "generate_model_template(\n",
     "\"diabetes\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
     "),\n",
@@ -1330,12 +1308,15 @@
     "),\n",
     "generate_model_template(\n",
     "\"heloc\", \"fttransformer\", param_grid=fttransformer_large_param_grid.copy()\n",
+    "),       \n",
+    "generate_model_template(\n",
+    "\"heloc\", \"resnet\", param_grid=resnet_large_param_grid.copy()\n",
     "),]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 47,
    "id": "9b6fb5db-13b1-4073-a150-cf73d4b3efbb",
    "metadata": {
     "scrolled": true
@@ -1344,28 +1325,26 @@
     {
      "data": {
       "text/plain": [
-       "[('titanic', 'resnet'),\n",
-       " ('breastcancer', 'resnet'),\n",
-       " ('ageconditions', 'resnet'),\n",
-       " ('adult', 'resnet'),\n",
-       " ('housing', 'resnet'),\n",
+       "[('creditcard', 'catboost'),\n",
+       " ('creditcard', 'gate'),\n",
        " ('creditcard', 'resnet'),\n",
-       " ('heloc', 'resnet'),\n",
-       " ('covertype', 'resnet')]"
+       " ('creditcard', 's1dcnn'),\n",
+       " ('creditcard', 'fttransformer'),\n",
+       " ('creditcard', 'gandalf')]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"resnet\" in i]"
+    "[i for i in total_missing_combos if \"creditcard\" in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 41,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1379,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 42,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1391,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 43,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1403,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 44,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1415,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 45,
    "id": "0d341ee6-91a6-4267-ae89-62d1d68f1e81",
    "metadata": {},
    "outputs": [],
@@ -1427,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 46,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
